--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "cli-table": "^0.3.11",
     "crypto-js": "^4.1.1",
     "jsonfile": "^6.1.0",
-    "poloniex-node-api": "^5.0.2"
+    "poloniex-node-api": "^5.0.2",
+    "sendmail": "^1.6.1"
   },
   "type": "module"
 }
