--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.27.2",
     "cli-table": "^0.3.11",
     "crypto-js": "^4.1.1",
+    "js-beautify": "^1.14.6",
     "jsonfile": "^6.1.0",
     "nodemailer": "^6.7.8",
     "poloniex-node-api": "^5.0.2"
